--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,7 @@
 streamlit==1.38.0
 pandas==2.2.2
-numpy==1.26.4
 matplotlib==3.9.2
 scikit-learn==1.5.2
-catboost==1.2.7
+catboost==1.2.8  # Последняя версия с поддержкой NumPy 2.x и Python 3.13
 joblib==1.4.2
 openpyxl==3.1.5
